# svg-clip

./: .coveragerc  .editorconfig  .gitignore  ABOUT_THIS_TEMPLATE.md  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Containerfile  HISTORY.md  LICENSE.django  LICENSE.md  LICENSE.python  LICENSE.rst  MANIFEST.in  Makefile  README.md  mkdocs.yml  package.json  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  rename_project.sh
.github/workflows/: main.yml  release.yml  rename_project.yml  static-pages.yml
svg_clip/: __init__.py  __main__.py  base.py  cli.py  exceptions.py  parsers.py
svg_clip/templatetags/: svg_clip.py
tests/: __init__.py  conftest.py  requirements-test.txt  test_base.py  test_svg_clip.py
