[metadata]
name = django-svg-clip
version = attr:svg_clip.VERSION
author = Dayal Moirangthem
author_email = thisisdayal7@gmail.com
url = https://github.com/thisisdayal/svg-clip/
description = A simple django templatetag plugin for rendering and manipulating SVGs
long_description = file: README.md, LICENSE.md, CHANGELOG.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    django >= 3.0, < 5

[options.packages.find]
exclude=tests*

[options.package_data]
heroicons.outline = *.svg
heroicons.solid = *.svg

[options.extras_require]
test =
    black
    codecov
    coverage
    django
    flake8
    gitchangelog
    isort
    mypy
    pytest-cov
    pystache
    pytest
    tox
